# vbscript-macos

./: CMakeLists.txt  main.c  wine_diffs.sh  wine_stubs.c
wine/dlls/kernelbase/: locale.c
wine/dlls/oleaut32/: oleaut.c
wine/include/: winbase.h  windef.h
